# rag-proxy

./: .env-example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  flake.nix  load_db.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pre-commit.yml
milvusdb/: start-db.sh
rag_proxy/: __init__.py  __main__.py  app.py  caikit.py  config.py  db.py  embedding.py  main.py  milvus.py  ra.py  rag.py  scripts.py  utility.py  vectordb.py
