[tool.poetry]
name = "rag-proxy"
version = "0.2.0"
description = ""
authors = ["Samuel Monson <smonson@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-community = "^0.2.12"
langchain-milvus = "^0.1.4"
fastapi = {extras = ["standard"], version = "^0.112.1"}
vllm = "^0.5.4"
sentence-transformers = "^3.0.1"
pydantic-settings = "^2.4.0"
caikit-nlp-client = { git = "https://github.com/opendatahub-io/caikit-nlp-client.git" }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"


[tool.poetry.group.tools.dependencies]
pyright = "^1.1.378"
ipython = "^8.27.0"

[tool.poetry.scripts]
rag-proxy = "rag_proxy.scripts:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
