[tool.poetry]
name = "rag-proxy"
version = "0.2.0"
description = ""
authors = ["Samuel Monson <smonson@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "^0.2.12"
langchain-milvus = "^0.1.4"
fastapi = {extras = ["standard"], version = "^0.112.1"}
pydantic-settings = "^2.4.0"
caikit-nlp-client = { git = "https://github.com/opendatahub-io/caikit-nlp-client.git" }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"


[tool.poetry.group.tools.dependencies]
pyright = "^1.1.378"
ipython = "^8.27.0"


[tool.poetry.group.load_db.dependencies]
torch = {version = "^2.2.2", source = "pytorch-cpu"}
torchvision = {version = "^0", source = "pytorch-cpu"}
docling = "1.11.0"
docling-core = "1.3.0"
docling-parse = "1.3.0"

[tool.poetry.scripts]
rag-proxy = "rag_proxy.scripts:main"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
